[gd_scene load_steps=2 format=3 uid="uid://c2uib5gb7iqph"]

[ext_resource type="Script" path="res://levels/level_mechanics/ladder.gd" id="1_ndp0r"]

[node name="ladder" type="Area2D" groups=["ladders"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_ndp0r")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 29.0
offset_bottom = 235.0
color = Color(0.156863, 1, 1, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(75, 10)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(15, 10)

[node name="ontop" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="ontop" to="." method="_on_ontop_body_entered"]
[connection signal="body_exited" from="ontop" to="." method="_on_ontop_body_exited"]
